add execution resource (dummy) for getting and posting 'run this now'
